syntax = "proto3";
package pb;

service EventStore {
    rpc CreateEvent(Event) returns (Response) {}
    rpc GetEvent(EventFilter) returns (EventResponse) {}
}

message Event {
    string event_id = 1;
    string event_type = 2;
    string event_data = 3;
    string aggregate_id = 4;
    string aggregate_type = 5;
    string channel = 6;
}

message EventFilter {
    string event_id = 1;
    string aggregated_id = 2;
}

message EventResponse {
    repeated Event events = 1;
}

message Response {
    bool is_success = 1;
    string err = 2;
}