syntax = "proto3";
package pb;

message PaymentCreatedCommand {
    string payment_id = 1;
    string sender_id = 2;
    string receiver_id = 3;
    string status = 4;
    int64 amount = 5;

    message Item {
        string item_id = 1;
        string item_name = 2;
        int64 unit_price = 3;
        int32 quantity = 4;
    }

    repeated Item list_items = 6;
}

message PaymentFinishedCommand {
    string payment_id = 1;
    string sender_id = 2;
    string receiver_id = 3;
    int64 amount = 4;
}